# Synthetic-Data-Validator-Tool

./: README.md  pyproject.toml  requirements.txt  stack_functions.cpp  test_stack_functions.cpp
sample_data/: invalid_example.csv  valid_example.csv
src/data_validator/: __init__.py  __main__.py  cli.py  utils.py  validators.py
tests/: test_cli.py  test_validators.py
